fix/HWPD-3548/diamond-line-z-index
linting

--- a/src/component-library/components/ScrollTransition/ScrollTransition.module.scss
+++ b/src/component-library/components/ScrollTransition/ScrollTransition.module.scss
@@ -40,7 +40,7 @@
     z-index: 1;
   }
 
-  [data-content="diamond"] {
+  [data-content='diamond'] {
     z-index: 0;
   }
 }
